# konku-rs

./: .eslintignore  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
backend/: .eslintrc.js  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
backend/src/: env.rs  env_config.rs  main.rs  multipart_utils.rs  procountor.rs
common/: package-lock.json  package.json  tsconfig.json
common/src/: Test.tsx  index.tsx
frontend/: .eslintignore  .eslintrc.js  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  LanguageSelector.tsx  i18n.ts  main.tsx  vite-env.d.ts
frontend/src/@types/: i18next.d.ts
frontend/src/input/: Button.tsx  Checkbox.tsx  DevFillButton.tsx  TextField.tsx
frontend/tests/testfiles/: formdata.js
server/: package-lock.json  package.json
server/src/: index.ts
